initial template for individual class views, modeled off of http://schema.org views

--- a/src/main/resources/templates/ont-view-full.vm
+++ b/src/main/resources/templates/ont-view-full.vm
@@ -11,7 +11,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
-	<meta name="robots" content="index, follow" />
+	<meta name="robots" content="" />
 	<link rel="stylesheet" type="text/css" href="../css/default.css" media="all"/>
 	<link rel="stylesheet" type="text/css" href="../css/schema.css" media="all"/>
 </head>
