--- a/src/main/webapp/css/schema.css
+++ b/src/main/webapp/css/schema.css
@@ -1,4 +1,4 @@
-/* styling a mix between scap.nist.gov and schema.org */
+/* styling a mix between scap.nist.gov and http://schema.org. Table definitions in this stylesheet from http://schema.org */
 @charset "utf-8";
 
 table.definition-table
