--- a/src/main/resources/templates/ont-view-full.vm
+++ b/src/main/resources/templates/ont-view-full.vm
@@ -7,7 +7,7 @@
 <!-- page style is modeled off of the http://schema.org/docs/full.html taxonomy view -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-	<title>Full Vocabulary View</title>
+	<title>${site-title} - Schema View</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<div id="header"><h1>Security Automation Controlled Vocabularies / Schemas</h1></div>
+<div id="header"><h1>${site-title}</h1></div>
 
 
 	<div id="content" class="col1">
