scaffolding for DynamicPathBuilder tests.

--- a/src/main/resources/templates/index.vm
+++ b/src/main/resources/templates/index.vm
@@ -13,8 +13,8 @@
 	<meta name="keywords" content="" />
 	<meta name="robots" content="" />
 	##this template will always be used at the root directory of the servlet.
-	<link rel="stylesheet" type="text/css" href="../css/default.css" media="all"/>
-	<link rel="stylesheet" type="text/css" href="../css/schema.css" media="all"/>
+	<link rel="stylesheet" type="text/css" href="css/default.css" media="all"/>
+	<link rel="stylesheet" type="text/css" href="css/schema.css" media="all"/>
 </head>
 <body>
 	
