fixed the rootView path generation so the rootViews are built with the correct path. Previously only the keys in the ViewContainer.views map had the correct path, but it was never carried over to the actual view. Current fix is a bit of a monkey-patch, but is okay for now. Also got most of the static file generation working.

--- a/src/main/resources/templates/ont-view-full.vm
+++ b/src/main/resources/templates/ont-view-full.vm
@@ -38,7 +38,7 @@
     											<td>
     												<table class=h>
     													<tr>
-    														#set( $path = $pathBuilder.buildPath("$child.getLabel()") )
+    														#set( $path = $pathBuilder.buildPathFromParent("$child.getLabel()") )
     														<td class="tc" colspan=4><a href="${path}">${child.getLabel()}</a>: ${child.getDescritpion()}</td>
     													</tr>
     													#recurseChildren( $child ) 
